--- a/encoder-dev.html
+++ b/encoder-dev.html
@@ -150,7 +150,7 @@
             <button id="decodeBtn" class="action-button secondary">Decode to Lua</button>
         </div>
         <div class="pipeline-step">
-            <label for="luaInput">2. Edit or Beautify Lua Code</label>
+            <label for="luaInput">2. Paste and Edit Lua Code</label>
             <div class="output-container">
                 <textarea id="luaInput" spellcheck="false" placeholder="-- Your Lua code will appear here after decoding,
 -- or you can paste it directly."></textarea>
