feat: use collective as additional identifier

--- a/index-dev.html
+++ b/index-dev.html
@@ -1049,7 +1049,7 @@ end`;
             const primaryModeSelect = document.getElementById('primary-mode-select');
             const isScavengers = primaryModeSelect && primaryModeSelect.value === 'Scavengers';
 
-            let renameCommand = isScavengers ? `$rename [Mod] NuttyB Scavengers ` : `$rename [Mod] NuttyB Raptors `;
+            let renameCommand = isScavengers ? `$rename [Mod] Collective NuttyB Scavengers ` : `$rename [Mod] Collective NuttyB Raptors `;
             const renameParts = [];
 
             if (isScavengers) {
