refactor: remove comments tab and update configurator title

--- a/index.html
+++ b/index.html
@@ -286,14 +286,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>NuttyB Configurator</h1>
+        <h1>Collective NuttyB Configurator</h1>
         
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
             <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="custom">Custom</button>
             <button class="tab-button" data-tab="links">Links</button>
-            <button class="tab-button" data-tab="comments">Comments</button>
         </div>
 
         <div id="config-tab" class="tab-content active">
@@ -414,26 +413,6 @@
 
         <div id="links-tab" class="tab-content">
             <p>Loading links...</p>
-        </div>
-
-        <div id="comments-tab" class="tab-content">
-            <p>Share feedback, tips, tweaks or widgets here. Edit comments by clicking on the timestamp.</a></p>
-		<script src="https://giscus.app/client.js"
-			data-repo="rcorex/nuttyb-config"
-			data-repo-id="R_kgDOPJlKyQ"
-			data-category="Announcements"
-			data-category-id="DIC_kwDOPJlKyc4CtRUV"
-			data-mapping="pathname"
-			data-strict="0"
-			data-reactions-enabled="0"
-			data-emit-metadata="0"
-			data-input-position="bottom"
-			data-theme="dark"
-			data-lang="en"
-			data-loading="lazy"
-			crossorigin="anonymous"
-			async>
-		</script>
         </div>
     </div>
 
