--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
             <button class="tab-button active" data-tab="config">Configuration</button>
             <button class="tab-button" data-tab="data">Data</button>
             <button class="tab-button" data-tab="custom">Custom</button>
+            <a class="tab-button" href="https://github.com/BAR-NuttyB-collective/NuttyB-Raptors/wiki" target="_blank" rel="noopener">WIKI</a>
         </div>
 
         <div id="config-tab" class="tab-content active">
@@ -435,7 +436,7 @@
         const customTweakForm = document.getElementById('custom-tweak-form');
         const customTweaksTableBody = document.querySelector('#custom-tweaks-table tbody');
         const mapsModesTableBody = document.querySelector('#maps-modes-table tbody');
-        const tabButtons = document.querySelectorAll('.tab-button');
+        const tabButtons = document.querySelectorAll('button.tab-button');
         const tabContents = document.querySelectorAll('.tab-content');
         const resetNoneBtn = document.getElementById('reset-none-btn');
         const resetDefaultBtn = document.getElementById('reset-default-btn');
